<resources>
    <string name="app_name">Linked</string>
    <string name="app_description">Linked lets you easily connect with the people around you.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="username_box_text">Username</string>
    <string name="password_box_text">Password</string>
    <string name="confirm_password_box_text">Confirm Password</string>
    <string name="display_name_box_label">Display Name</string>
    <string name="bio_box_label">About You</string>
    <string name="hashtags_box_label">Hashtags</string>
    <string name="photo_label">Photo</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="photo_upload_button_text">Upload</string>
</resources>
