<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/username_box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/username_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/password_box_label"
        android:layout_width="66dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/password_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/password_box"
        app:layout_constraintEnd_toStartOf="@+id/password_box"
        app:layout_constraintTop_toTopOf="@+id/password_box"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/confirm_password_box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_password_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_pwd_box"
        app:layout_constraintEnd_toStartOf="@+id/confirm_pwd_box"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/display_name_box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/display_name_box_label"
        app:layout_constraintBottom_toBottomOf="@+id/display_name_box"
        app:layout_constraintEnd_toStartOf="@+id/display_name_box"
        app:layout_constraintTop_toTopOf="@+id/display_name_box" />

    <TextView
        android:id="@+id/about_you_box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/bio_box_label"
        app:layout_constraintBottom_toBottomOf="@+id/about_you_box"
        app:layout_constraintEnd_toStartOf="@+id/about_you_box"
        app:layout_constraintTop_toTopOf="@+id/about_you_box" />

    <TextView
        android:id="@+id/tags_box_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/hashtags_box_label"
        app:layout_constraintBottom_toBottomOf="@+id/tags_box"
        app:layout_constraintEnd_toStartOf="@+id/tags_box"
        app:layout_constraintTop_toTopOf="@+id/tags_box"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/photo_label"
        app:layout_constraintBottom_toBottomOf="@+id/photo_upload_button"
        app:layout_constraintEnd_toStartOf="@+id/photo_upload_button"
        app:layout_constraintTop_toTopOf="@+id/photo_upload_button" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="CreateAccount"
        android:text="@string/create_account_button"
        app:layout_constraintEnd_toEndOf="@+id/photo_upload_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/photo_upload_button"
        app:layout_constraintTop_toBottomOf="@+id/photo_upload_button" />

    <EditText
        android:id="@+id/username_box"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/username_box"
        app:layout_constraintStart_toStartOf="@+id/username_box"
        app:layout_constraintTop_toBottomOf="@+id/username_box" />

    <EditText
        android:id="@+id/confirm_pwd_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_box"
        app:layout_constraintTop_toBottomOf="@+id/password_box" />

    <EditText
        android:id="@+id/display_name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/confirm_pwd_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirm_pwd_box"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pwd_box" />

    <EditText
        android:id="@+id/about_you_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/display_name_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/display_name_box"
        app:layout_constraintTop_toBottomOf="@+id/display_name_box" />

    <EditText
        android:id="@+id/tags_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/about_you_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/about_you_box"
        app:layout_constraintTop_toBottomOf="@+id/about_you_box" />

    <Button
        android:id="@+id/photo_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="UploadPhoto"
        android:text="@string/photo_upload_button_text"
        app:layout_constraintEnd_toEndOf="@+id/tags_box"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="@+id/tags_box"
        app:layout_constraintTop_toBottomOf="@+id/tags_box" />

</androidx.constraintlayout.widget.ConstraintLayout>